--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2>Reservas para Hospedagem</h2>
             <hr>
             <br>
-            <img class="imgnoticia" src="imagens/clubmed.png" alt="clubmed">
-            <img class="imgnoticia" src="imagens/fourseasons.png" alt="fourseasons">
-            <img class="imgnoticia" src="imagens/pousada1.png" alt="pousada">
+            <img class="imgnoticia" src="clubmed.png" alt="clubmed">
+            <img class="imgnoticia" src="fourseasons.png" alt="fourseasons">
+            <img class="imgnoticia" src="pousada1.png" alt="pousada">
         </div>
 
         <div class="box">
@@ -66,9 +66,9 @@
     <footer>
         <p id="p-footer">&copy; 2024 Filipe e Gabriela. Todos os direitos reservados.</p>
         <div class="linksrodape">
-            <a href="imagens/insta.png" class="insta"></a>
-            <a href="imagens/youtube.png" class="youtube"></a>
-            <a href="imagens/twitter.png" class="twitter"></a>
+            <a href="insta.png" class="insta"></a>
+            <a href="youtube.png" class="youtube"></a>
+            <a href="twitter.png" class="twitter"></a>
         </div>
     </footer>
 
