--- a/informacoes.html
+++ b/informacoes.html
@@ -25,23 +25,23 @@
             <p>Rio das Pedras - Angra dos Reis - Rio de Janeiro</p>
             <p>Rodovia BR-101 KM 445.5 - Mangaratiba</p>
             
-            <img src="imagens/girl-931776_1280.jpg" alt="Descrição da imagem">
+            <img src="girl-931776_1280.jpg" alt="Descrição da imagem">
         </div>
 
         <div class="text-image" id="inform">
             <h1 class="section">Hospedagem</h1>
             <p>Clube Med</p>
             <p>Do dia 18/10 ao dia 20/10</p>
-            <img src="imagens/trees-598311_1280.jpg" alt="Hospedagem">
+            <img src="trees-598311_1280.jpg" alt="Hospedagem">
         </div>
     </article>
 
     <footer>
         <p id="p-footer">&copy; 2024 Filipe e Gabriela. Todos os direitos reservados.</p>
         <div class="linksrodape">
-            <a href="imagens/insta.png" class="insta"></a>
-            <a href="imagens/youtube.png" class="youtube"></a>
-            <a href="imagens/twitter.png" class="twitter"></a>
+            <a href="insta.png" class="insta"></a>
+            <a href="youtube.png" class="youtube"></a>
+            <a href="twitter.png" class="twitter"></a>
         </div>
     </footer>
 </body>
