--- a/informacoes.html
+++ b/informacoes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informações</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icons8-wedding-50.png" type="image/x-icon">
 </head>
 <body>
     <header id="inf">
